<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_name" />

    <EditText
        android:id="@+id/etItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_price"
        android:inputType="numberDecimal"
        android:layout_marginTop="12dp" />

    <CheckBox
        android:id="@+id/cbItemFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_item_free"
        android:layout_marginTop="12dp" />

</LinearLayout>
